# Kalshi-Weather-Project

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: backfill-kalshi-quotes-daily.yml  ingest-kalshi-quotes.yml  ingest-kalshi-resolutions.yml  ingest-nws-cli.yml  ingest-nws-grid.yml
config/: stations.yaml
docs/: data_dictionary.md  runbook.md
plans/: agent_design_plan.md  master_plan.md  nws_api_implementation_plan.md
scripts/: backfill_kalshi.py  backfill_nws.py  diagnose_ndfd_connection.py  resolve_stations.py  run_ingest.py  run_kalshi_ingest.py
src/kalshi_weather/: cli.py  cli_parser.py  config.py  db.py  iem_client.py  ingest.py  kalshi_backfill.py  kalshi_client.py  kalshi_ingest.py  ndfd_client.py  nws_backfill.py  nws_client.py  resolve.py  schema.sql  time_utils.py
src/kalshi_weather.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kalshi_weather/ingest/: __init__.py  common.py  kalshi.py  kalshi_backfill.py  ndfd_backfill.py  nws.py  nws_backfill.py
tests/: README.md  test_backfills.py  test_cli_parser.py  test_ingest_upsert.py  test_kalshi_ingest.py  test_ndfd_backfill.py  test_nws_client.py  test_time_utils.py
tests/fixtures/: griddata_nyc_trimmed.json  points_nyc.json
tests/fixtures/cli/: aus_final.txt  aus_intermediate.txt  chi_final.txt  chi_intermediate.txt  den_final.txt  den_intermediate.txt  meta.json  mia_final.txt  mia_intermediate.txt  nyc_final.txt  nyc_intermediate.txt  nyc_record.txt  phl_final.txt  phl_intermediate.txt
tests/fixtures/iem/: list_clinyc_20260710.json  text_clinyc_202607100625.txt
tests/fixtures/kalshi/: candlesticks_trimmed.json  kxhighny_open_trimmed.json  kxhighny_settled_trimmed.json
