[project]
name = "kalshi-weather"
version = "0.1.0"
description = "NWS data ingestion pipeline (gridpoint forecasts + Daily Climate Reports) for Kalshi weather-market modeling"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.1",
    "requests>=2.32",
    "tenacity>=9.0",
    "isodate>=0.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]
# GRIB2 decoding for `backfill nws-grid` (historical forecast vintages, NDFD archive).
# Heavy binary deps (eccodes via wheel) not needed by the rest of the pipeline, so kept
# out of `dev` — install with `pip install -e '.[ndfd]'`. See docs/runbook.md §2.1.
ndfd = [
    "pygrib>=2.1",
    "numpy>=1.24",
]

[project.scripts]
kalshi-weather = "kalshi_weather.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
